; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_write_by_dnode.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_write_by_dnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@DMU_READ_PREFETCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dmu_write_by_dnode(i32* %0, i32 %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i32, i32* %8, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %5
  br label %36

16:                                               ; preds = %5
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @FALSE, align 4
  %21 = load i32, i32* @FTAG, align 4
  %22 = load i32, i32* @DMU_READ_PREFETCH, align 4
  %23 = call i32 @dmu_buf_hold_array_by_dnode(i32* %17, i32 %18, i32 %19, i32 %20, i32 %21, i32* %12, i32*** %11, i32 %22)
  %24 = call i32 @VERIFY0(i32 %23)
  %25 = load i32**, i32*** %11, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @dmu_write_impl(i32** %25, i32 %26, i32 %27, i32 %28, i8* %29, i32* %30)
  %32 = load i32**, i32*** %11, align 8
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* @FTAG, align 4
  %35 = call i32 @dmu_buf_rele_array(i32** %32, i32 %33, i32 %34)
  br label %36

36:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @dmu_buf_hold_array_by_dnode(i32*, i32, i32, i32, i32, i32*, i32***, i32) #1

declare dso_local i32 @dmu_write_impl(i32**, i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @dmu_buf_rele_array(i32**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
